# sc-prompt-eval

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: full_experiment.yaml  mini_pilot.yaml
data/: icl_examples.json  scenarios.json  smartaudit_scenarios.json
data/benign_contracts/: AccessControlled.sol  SafeAuction.sol  SafeBank.sol  SafeCaller.sol  SafeLoop.sol  SafeRandomness.sol  SafeToken.sol  metadata.json
data/smartbugs_mini/: vulnerabilities.json
outputs/experiment_v1/: RESULTS.md  experiment_config.json  final_results.json  results_summary.json  rq2_per_category_metrics.json  rq2_table.tex
prompts/: p0_baseline.j2  p1_icl_single_type.j2  p2_structured_reasoning.j2  p3_smartguard.j2  p3_smartguard_icl.j2  p4_stage1_scenario.j2  p4_stage2_property.j2  p4_stage3_extraction.j2  p5_auditor.j2  p5_ba_mode.j2  p5_counselor.j2  p5_expert.j2  p5_project_manager.j2  p5_role_exchange.j2  p5_ta_mode.j2  p6_iaudit.j2
schemas/: findings.schema.json
scripts/: aggregate_results.py  build_qian_patterns.py  calculate_rq2_metrics.py
src/sc_prompt_eval/: __init__.py  cli.py  config.py  io.py  paths.py
src/sc_prompt_eval/analysis/: __init__.py  figures.py  pareto.py  tables.py
src/sc_prompt_eval/confirmation/: __init__.py  base.py  dataflow.py  function_args.py  order_check.py  value_comparison.py
src/sc_prompt_eval/datasets/: __init__.py  base.py  benign.py  loader.py  smartbugs_curated.py
src/sc_prompt_eval/models/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py
tests/: test_full_pipeline.py
(+2440 files in other folders)
