[project]
name = "sc-prompt-eval"
version = "0.1.0"
description = "Prompt engineering evaluation scaffold for smart contract vulnerability detection with LLMs"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0",
    "pydantic>=2.0",
    "tqdm",
    "rich",
    "pandas",
    "numpy",
    "scipy>=1.13",
    "scikit-learn>=1.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "tenacity>=8.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.2.0",
    "antlr4-python3-runtime>=4.13",  # GPTScan-aligned pre-filtering parser
]

[project.optional-dependencies]
# P6 iAudit: Local model inference with fine-tuned LLMs
iaudit = [
    "torch>=2.0",
    "transformers>=4.35",
    "bitsandbytes>=0.41",
]
# All optional dependencies
all = [
    "torch>=2.0",
    "transformers>=4.35",
    "bitsandbytes>=0.41",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.j2", "*.json"]

# Include prompts and data in source distribution
[tool.setuptools.data-files]
"prompts" = ["prompts/*.j2"]
"data" = ["data/patterns_database.json"]
"schemas" = ["schemas/*.json"]
"configs" = ["configs/*.yaml"]
